Fixed the link to Fedora; minor CSS changes for text wrap around avatar

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1071,6 +1071,8 @@ div.avaicon {
 	clear:right;
 	border-radius: 100%;
 	position: relative;
+	padding:8px;
+	text-align: justify;
 }
 
 div.avaicon img.use-icon {
